--- a/SDFCalendarOSX/SDFCalendarOSX/SDFCalendarOSXNonCurrentMonthDay.xib
+++ b/SDFCalendarOSX/SDFCalendarOSX/SDFCalendarOSXNonCurrentMonthDay.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="13C64" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="13C1021" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5056"/>
     </dependencies>
@@ -26,6 +26,9 @@
                     </textFieldCell>
                 </textField>
             </subviews>
+            <connections>
+                <outlet property="dayLabel" destination="eEX-Ms-L3D" id="3oK-BK-vzG"/>
+            </connections>
         </customView>
     </objects>
 </document>
