--- a/SDFCalendarOSX/SDFCalendarOSX/SDFCalendarOSXCalendarDay.xib
+++ b/SDFCalendarOSX/SDFCalendarOSX/SDFCalendarOSXCalendarDay.xib
@@ -17,10 +17,10 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LZZ-d6-s3X" userLabel="Day Label">
-                    <rect key="frame" x="16" y="27" width="38" height="17"/>
+                    <rect key="frame" x="-2" y="24" width="74" height="22"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="[day]" id="fml-u2-Nvm">
-                        <font key="font" metaFont="system"/>
+                        <font key="font" metaFont="system" size="18"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
